5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4369/executions/1692_1100.log
== TEST (2019-05-01 01:04:00) 
-- CODE:
vc = float(input("Digite o valor da cedula: "))

if(vc == 2 or vc == 5 or vc == 10 or vc == 20 or vc == 50 or vc == 100):
elif(vc == 2):
	print("Tartaruga")
	else:
		print("Invalido")
-- ERROR:
File "XXXX", line 4
    elif(vc == 2):
       ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 01:04:12) 
-- CODE:
vc = float(input("Digite o valor da cedula: "))

if(vc == 2 or vc == 5 or vc == 10 or vc == 20 or vc == 50 or vc == 100):
	elif(vc == 2):
		print("Tartaruga")
	else:
		print("Invalido")
-- ERROR:
File "XXXX", line 4
    elif(vc == 2):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 01:04:24) 
-- CODE:
vc = float(input("Digite o valor da cedula: "))

if(vc == 2 or vc == 5 or vc == 10 or vc == 20 or vc == 50 or vc == 100):
	elif(vc == 2):
		print("Tartaruga")
else:
	print("Invalido")
-- ERROR:
File "XXXX", line 4
    elif(vc == 2):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 01:04:42) 
-- CODE:
vc = float(input("Digite o valor da cedula: "))

if(vc == 2 or vc == 5 or vc == 10 or vc == 20 or vc == 50 or vc == 100):
elif(vc == 2):
	print("Tartaruga")
else:
	print("Invalido")
-- ERROR:
File "XXXX", line 4
    elif(vc == 2):
       ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 01:04:59) 
-- CODE:
vc = float(input("Digite o valor da cedula: "))

if(vc == 2 or vc == 5 or vc == 10 or vc == 20 or vc == 50 or vc == 100):
	elif(vc == 2):
		print("Tartaruga")
else:
	print("Invalido")
-- ERROR:
File "XXXX", line 4
    elif(vc == 2):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 01:05:49) 
-- CODE:
vc = float(input("Digite o valor da cedula: "))

if (vc == 2 or vc == 5 or vc == 10 or vc == 20 or vc == 50 or vc == 100):
	elif(vc == 2):
		print("Tartaruga")
else:
	print("Invalido")
-- ERROR:
File "XXXX", line 4
    elif(vc == 2):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 01:06:10) 
-- CODE:
vc = float(input("Digite o valor da cedula: "))

if (vc == 2 or vc == 5 or vc == 10 or vc == 20 or vc == 50 or vc == 100):
elif(vc == 2):
	print("Tartaruga")
else:
	print("Invalido")
-- ERROR:
File "XXXX", line 4
    elif(vc == 2):
       ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 01:06:51) 
-- CODE:
vc = float(input("Digite o valor da cedula: "))

if(vc == 2 or vc == 5 or vc == 10 or vc == 20 or vc == 50 or vc == 100):
elif(vc == 2):
	print("Tartaruga")
else:
	print("Invalido")
-- ERROR:
File "XXXX", line 4
    elif(vc == 2):
       ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 01:08:06) 
-- CODE:
vc = float(input("Digite o valor da cedula: "))

if(vc == 2):
	print("Tartaruga")
elif(vc == 5):
	print("Garca")
else:
	print("Invalido")
-- OUTPUT:
Invalido
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 01:10:16) 
-- CODE:
vc = float(input("Digite o valor da cedula: "))

if(vc == 2):
	print("Tartaruga")
elif(vc == 5):
	print("Garca")
elif(vc == 10):
	print("Arara")
elif(vc == 20):
	print("Mico-leao-dourado")
elif(vc == 50):
	print("Onca-pintada")
elif(vc == 100):
	print("Garoupa")
else:
	print("Invalido")
-- OUTPUT:
Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 01:10:24) 
-- CODE:
vc = float(input("Digite o valor da cedula: "))

if(vc == 2):
	print("Tartaruga")
elif(vc == 5):
	print("Garca")
elif(vc == 10):
	print("Arara")
elif(vc == 20):
	print("Mico-leao-dourado")
elif(vc == 50):
	print("Onca-pintada")
elif(vc == 100):
	print("Garoupa")
else:
	print("Invalido")
-- EXECUTION TIME:
0.14505
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 01:10:49) 
-- CODE:
vc = int(input("Digite o valor da cedula: "))

if(vc == 2):
	print("Tartaruga")
elif(vc == 5):
	print("Garca")
elif(vc == 10):
	print("Arara")
elif(vc == 20):
	print("Mico-leao-dourado")
elif(vc == 50):
	print("Onca-pintada")
elif(vc == 100):
	print("Garoupa")
else:
	print("Invalido")
-- EXECUTION TIME:
0.196237
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 01:12:05) 
-- CODE:
vc = int(input("Digite o valor da cedula: "))

print("Entrada:", vc)

if(vc == 2):
	print("Tartaruga")
elif(vc == 5):
	print("Garca")
elif(vc == 10):
	print("Arara")
elif(vc == 20):
	print("Mico-leao-dourado")
elif(vc == 50):
	print("Onca-pintada")
elif(vc == 100):
	print("Garoupa")
else:
	print("Invalido")
-- OUTPUT:
Entrada: 100
Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 01:14:42) 
-- CODE:
vc = int(input("Digite o valor da cedula: "))

print("Entrada:", vc)

if(vc == 2 or vc == 5 or vc == 10 or vc == 20 or vc == 50 or vc == 100):
	print("Animal:")
elif(vc == 2):
	print("Tartaruga")
elif(vc == 5):
	print("Garca")
elif(vc == 10):
	print("Arara")
elif(vc == 20):
	print("Mico-leao-dourado")
elif(vc == 50):
	print("Onca-pintada")
elif(vc == 100):
	print("Garoupa")
else:
	print("Invalido")
-- OUTPUT:
Entrada: 100
Animal:
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 01:17:20) 
-- CODE:
vc = int(input("Digite o valor da cedula: "))

print("Entrada:", vc)

if(vc == 2 and vc == 5 and vc == 10 and vc == 20 and vc == 50 and vc == 100):
	print("Animal:")
elif(vc == 2):
	print("Tartaruga")
elif(vc == 5):
	print("Garca")
elif(vc == 10):
	print("Arara")
elif(vc == 20):
	print("Mico-leao-dourado")
elif(vc == 50):
	print("Onca-pintada")
elif(vc == 100):
	print("Garoupa")
else:
	print("Invalido")
-- OUTPUT:
Entrada: 100
Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 01:19:38) 
-- CODE:
vc = int(input("Digite o valor da cedula: "))

print("Entrada:", vc)
print("Animal:")

if(vc == 2 and vc == 5 and vc == 10 and vc == 20 and vc == 50 and vc == 100):
	print("Animal:")
elif(vc == 2):
	print("Tartaruga")
elif(vc == 5):
	print("Garca")
elif(vc == 10):
	print("Arara")
elif(vc == 20):
	print("Mico-leao-dourado")
elif(vc == 50):
	print("Onca-pintada")
elif(vc == 100):
	print("Garoupa")
else:
	print("Invalido")
-- OUTPUT:
Entrada: 100
Animal:
Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 01:21:43) 
-- CODE:
vc = int(input("Digite o valor da cedula: "))

print("Entrada:", vc)

if(vc == 2 and vc == 5 and vc == 10 and vc == 20 and vc == 50 and vc == 100):
	print("Animal:")
elif(vc == 2):
	print("Tartaruga")
elif(vc == 5):
	print("Garca")
elif(vc == 10):
	print("Arara")
elif(vc == 20):
	print("Mico-leao-dourado")
elif(vc == 50):
	print("Onca-pintada")
elif(vc == 100):
	print("Garoupa")
else:
	print("Invalido")
-- OUTPUT:
Entrada: 100
Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 01:22:58) 
-- CODE:
vc = int(input("Digite o valor da cedula: "))

print("Entrada:", vc)

if(vc == min(2) and vc == max(100)):
	print("Animal:")
elif(vc == 2):
	print("Tartaruga")
elif(vc == 5):
	print("Garca")
elif(vc == 10):
	print("Arara")
elif(vc == 20):
	print("Mico-leao-dourado")
elif(vc == 50):
	print("Onca-pintada")
elif(vc == 100):
	print("Garoupa")
else:
	print("Invalido")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    if(vc == min(2) and vc == max(100)):
TypeError: 'int' object is not iterable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 01:24:24) 
-- CODE:
vc = int(input("Digite o valor da cedula: "))

print("Entrada:", vc)

if(vc % 2 == 0):
	print("Animal:")
elif(vc == 2):
	print("Tartaruga")
elif(vc == 5):
	print("Garca")
elif(vc == 10):
	print("Arara")
elif(vc == 20):
	print("Mico-leao-dourado")
elif(vc == 50):
	print("Onca-pintada")
elif(vc == 100):
	print("Garoupa")
else:
	print("Invalido")
-- OUTPUT:
Entrada: 100
Animal:
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 01:26:30) 
-- CODE:
vc = int(input("Digite o valor da cedula: "))

print("Entrada:", vc)

if(vc == 2):
	print("Tartaruga")
elif(vc == 5):
	print("Garca")
elif(vc == 10):
	print("Arara")
elif(vc == 20):
	print("Mico-leao-dourado")
elif(vc == 50):
	print("Onca-pintada")
elif(vc == 100):
	print("Garoupa")
else:
	print("Animal", "Invalido")
-- OUTPUT:
Entrada: 100
Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 01:27:11) 
-- CODE:
vc = int(input("Digite o valor da cedula: "))

print("Entrada:", vc)

if(vc == 2):
	print("Animal:","Tartaruga")
elif(vc == 5):
	print("Animal:","Garca")
elif(vc == 10):
	print("Animal:","Arara")
elif(vc == 20):
	print("Animal:","Mico-leao-dourado")
elif(vc == 50):
	print("Animal:","Onca-pintada")
elif(vc == 100):
	print("Animal:","Garoupa")
else:
	print("Animal:", "Invalido")
-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 01:27:18) 
-- CODE:
vc = int(input("Digite o valor da cedula: "))

print("Entrada:", vc)

if(vc == 2):
	print("Animal:","Tartaruga")
elif(vc == 5):
	print("Animal:","Garca")
elif(vc == 10):
	print("Animal:","Arara")
elif(vc == 20):
	print("Animal:","Mico-leao-dourado")
elif(vc == 50):
	print("Animal:","Onca-pintada")
elif(vc == 100):
	print("Animal:","Garoupa")
else:
	print("Animal:", "Invalido")
-- EXECUTION TIME:
0.140727
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
Animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
Animal: Onca-pintada
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
